--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - pip install -r requirements.txt
 
 before_script:
-  - "psql -c 'createuser yummyadmin;' -P"
+  - "psql -c 'createuser yummyadmin;'"
   - "psql -c 'createdb yummydb_test;' -U yummyadmin"
   - "rake db:migrate"
   
