--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ before_script:
   - psql -c 'create database yummydb_test;' -U postgres
   
 script:
-  - nosetests --exe -v
-  - nosetests --exe --with-coverage --cover-package=app
+  - nosetests
+  - nosetests --with-coverage
   - coveralls
 
 after_sucess:
