--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ astroid==1.5.3
 bcrypt==3.1.4
 cffi==1.11.2
 click==6.7
+coverage==4.4.1
+coveralls==1.2.0
 Flask==0.12.2
 Flask-API==1.0
 Flask-Bcrypt==0.7.1
