--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,20 @@
 alembic==0.9.6
 astroid==1.5.3
 bcrypt==3.1.4
+certifi==2017.11.5
 cffi==1.11.2
+chardet==3.0.4
 click==6.7
+coverage==4.4.2
+coveralls==1.2.0
+docopt==0.6.2
 Flask==0.12.2
 Flask-API==1.0
 Flask-Bcrypt==0.7.1
 Flask-Migrate==2.1.1
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
+idna==2.6
 isort==4.2.15
 itsdangerous==0.24
 Jinja2==2.9.6
@@ -23,7 +29,9 @@ PyJWT==1.5.3
 pylint==1.7.4
 python-dateutil==2.6.1
 python-editor==1.0.3
+requests==2.18.4
 six==1.11.0
 SQLAlchemy==1.1.14
+urllib3==1.22
 Werkzeug==0.12.2
 wrapt==1.10.11
