--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alembic==0.9.6
+aniso8601==1.3.0
 astroid==1.5.3
 bcrypt==3.1.4
 certifi==2017.11.5
@@ -13,6 +14,7 @@ Flask==0.12.2
 Flask-API==1.0
 Flask-Bcrypt==0.7.1
 Flask-Migrate==2.1.1
+Flask-RESTful==0.3.6
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
 idna==2.6
@@ -32,10 +34,12 @@ PyJWT==1.5.3
 pylint==1.7.4
 python-dateutil==2.6.1
 python-editor==1.0.3
+pytz==2017.3
 PyYAML==3.12
 requests==2.18.4
 six==1.11.0
 SQLAlchemy==1.1.14
 urllib3==1.22
+validate-email==1.3
 Werkzeug==0.12.2
 wrapt==1.10.11
