--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==0.9.6
 aniso8601==1.3.0
 astroid==1.5.3
 bcrypt==3.1.4
+blinker==1.4
 certifi==2017.11.5
 cffi==1.11.2
 chardet==3.0.4
@@ -13,6 +14,7 @@ flasgger==0.8.0
 Flask==0.12.2
 Flask-API==1.0
 Flask-Bcrypt==0.7.1
+Flask-Mail==0.9.0
 Flask-Migrate==2.1.1
 Flask-RESTful==0.3.6
 Flask-Script==2.0.6
@@ -38,6 +40,7 @@ pytz==2017.3
 PyYAML==3.12
 requests==2.18.4
 six==1.11.0
+sparkpost==1.3.5
 SQLAlchemy==1.1.14
 urllib3==1.22
 validate-email==1.3
