--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
 before_script:
 - psql -c 'create database yummydb_test;' -U postgres
 script:
-- nosetests --with-coverage --cover-package=app
+- py.test --cov=app tests/
 - coveralls
 after_sucess:
 - coveralls
