--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==0.9.6
 aniso8601==1.3.0
 astroid==1.5.3
+attrs==17.4.0
 bcrypt==3.1.4
 blinker==1.4
 certifi==2017.11.5
@@ -30,10 +31,14 @@ MarkupSafe==1.0
 mccabe==0.6.1
 mistune==0.8.3
 nose==1.3.7
+pluggy==0.6.0
 psycopg2==2.7.3.2
+py==1.5.2
 pycparser==2.18
 PyJWT==1.5.3
 pylint==1.7.4
+pytest==3.4.0
+pytest-cov==2.5.1
 python-dateutil==2.6.1
 python-editor==1.0.3
 pytz==2017.3
