--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ flasgger==0.8.0
 Flask==0.12.2
 Flask-API==1.0
 Flask-Bcrypt==0.7.1
+Flask-Cors==3.0.3
 Flask-Mail==0.9.0
 Flask-Migrate==2.1.1
 Flask-RESTful==0.3.6
